[tool.poetry]
name = "a-mem"
version = "0.0.1"
description = "forked from https://github.com/agiresearch/A-mem"
authors = ["hachimada <60519909+hachimada@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = ">=2.2.2"
chromadb = ">=0.4.22"
rank-bm25 = ">=0.2.2"
nltk = ">=3.8.1"
transformers = ">=4.36.2"
litellm = ">=1.16.11"
numpy = ">=1.24.3"
scikit-learn = ">=1.3.2"
openai = ">=1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
